--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
-  "name": "gh-profile-reamde-generator",
+  "name": "github-profile-readme-generator",
   "private": true,
   "description": "A simple react app to generate beautiful github profile readme in md(markdown)",
-  "version": "0.1.0",
+  "version": "1.2.0",
   "author": "Rahul Jain <rahuldkjain@gmail.com>",
   "dependencies": {
     "@primer/octicons-react": "^10.0.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.5",
+    "enzyme-to-json": "^3.6.1",
     "gatsby": "^2.23.12",
     "gatsby-image": "^2.4.9",
     "gatsby-plugin-google-analytics": "^2.3.11",
@@ -35,7 +38,6 @@
     "identity-obj-proxy": "3.0.0",
     "jest": "26.4.2",
     "prettier": "2.0.5",
-    "react-test-renderer": "16.13.1",
     "tailwindcss": "^1.7.6"
   },
   "keywords": [
@@ -49,14 +51,14 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "jest",
+    "test": "jest -i -u --coverage",
     "deploy": "gatsby build --prefix-paths && gh-pages -d public -b master"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/rahuldkjain/gh-profile-readme-generator"
+    "url": "https://github.com/rahuldkjain/github-profile-readme-generator"
   },
   "bugs": {
-    "url": "https://github.com/rahuldkjain/gh-profile-readme-generator/issues"
+    "url": "https://github.com/rahuldkjain/github-profile-readme-generator/issues"
   }
 }
